[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/DialogCreator/Nodes/GraphNodeStart.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://addons/DialogCreator/Styles/FrameBase.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/DialogCreator/Resources/OptionButtonMark.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 23.0
content_margin_right = 26.0
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color( 1, 0, 0, 0.427451 )
border_width_top = 27
border_color = Color( 1, 0, 0, 0.203922 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
border_color = Color( 0.45098, 0.45098, 0.45098, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.509804, 0.509804, 0.509804, 0.470588 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.282353, 0.282353, 0.282353, 1 )
border_blend = true
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11
shadow_color = Color( 0, 0, 0, 0.0941176 )
shadow_size = 2

[node name="GraphNodeStart" type="GraphNode"]
margin_right = 399.0
margin_bottom = 217.0
custom_styles/frame = ExtResource( 3 )
custom_styles/selectedframe = SubResource( 1 )
custom_colors/close_color = Color( 1, 1, 1, 1 )
custom_colors/title_color = Color( 1, 1, 1, 1 )
custom_colors/resizer_color = Color( 1, 1, 1, 1 )
custom_constants/close_offset = 22
custom_constants/title_offset = 22
title = "Test Node "
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 0.0784314, 1, 0, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 0.101961, 1, 0, 1 )
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color( 0.0784314, 1, 0, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 0.0784314, 1, 0, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = 23.0
margin_right = 373.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 23.0
margin_top = 31.0
margin_right = 373.0
margin_bottom = 193.0
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 350.0
margin_bottom = 162.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 85.0
margin_right = 265.0
margin_bottom = 162.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/Control"]
margin_left = 68.0
margin_right = 112.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 7
text = "asdasd"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/Control"]
margin_left = 58.0
margin_top = 22.0
margin_right = 122.0
margin_bottom = 86.0
size_flags_horizontal = 4
size_flags_vertical = 7
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/Control"]
margin_left = 68.0
margin_top = 94.0
margin_right = 112.0
margin_bottom = 108.0
mouse_filter = 1
size_flags_horizontal = 4
size_flags_vertical = 7
text = "asdasd"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LineEdit" type="LineEdit" parent="MarginContainer/CenterContainer/Control"]
margin_top = 116.0
margin_right = 180.0
margin_bottom = 130.0
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="OptionButton" type="OptionButton" parent="MarginContainer/CenterContainer/Control"]
margin_top = 138.0
margin_right = 180.0
margin_bottom = 162.0
rect_min_size = Vector2( 180, 0 )
size_flags_horizontal = 4
size_flags_vertical = 7
custom_icons/arrow = ExtResource( 4 )
custom_styles/normal = SubResource( 3 )
custom_constants/arrow_margin = 9
[connection signal="dragged" from="." to="." method="_on_GraphNodeStart_dragged"]
