[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/DialogCreator/Nodes/GraphNodeStart.gd" type="Script" id=1]

[node name="GraphNodeStart" type="GraphNode"]
self_modulate = Color( 1, 0, 0.890196, 1 )
margin_top = -1.0
margin_right = 169.0
margin_bottom = 123.0
title = "Start Node"
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0, 1, 0.133333, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 153.0
margin_bottom = 38.0
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 153.0
margin_bottom = 57.0

[node name="EntryDescription" type="Label" parent="HBoxContainer"]
margin_right = 69.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
text = "EntryPoint:"
align = 1
valign = 2

[node name="Entry" type="Label" parent="HBoxContainer"]
margin_left = 73.0
margin_right = 81.0
margin_bottom = 18.0
rect_min_size = Vector2( 0, 18 )
text = "0"
align = 1
valign = 2
[connection signal="close_request" from="." to="." method="_on_graphNodeStart_close_request"]
[connection signal="resize_request" from="." to="." method="_on_graphNodeStart_resize_request"]
